sprites ausgelagert in neues file

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
     <div id="canvas-container"></div>
     <script src="scenes.js"></script>
+    <script src="sprites.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
