--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <span class="hint">Klicke „Start Audio“, erlaube das Mikro. Optional ein Video laden.</span>
     </div>
     <div id="canvas-container"></div>
+    <script src="streak.js"></script>
     <script src="scenes.js"></script>
     <script src="sprites.js"></script>
     <script src="sketch.js"></script>
